2014-05-27  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Configs.pl: Check Amanda::Rest::Configs
	* installcheck/Amanda_Rest_Dles.pl: Check Amanda::Rest:Dles
	* installcheck/Amanda_Rest_Labels.pl: Check Amanda::Rest::Labels
	* installcheck/Amanda_Rest_Version.pl: Check Amanda::Rest::Version
	* installcheck/Amanda_Tapelist.pl: Fix for reuse.
	* installcheck/Installcheck/Dumpcache.pm: Fix for 0_setupcache
	* installcheck/Installcheck/Rest.pm: New perl modules to start/stop
	  the Rest server.
	* installcheck/Makefile.am: Add Amanda_Rest_Configs, Amanda_Rest_Dles,
	  Amanda_Rest_Labels and Amanda_Rest_Version
	* perl/Amanda/Config.swg: Small fix.
	* perl/Amanda/Curinfo.pm: Add message code 1300030 and 1300031
	* perl/Amanda/Curinfo/Info.pm: Fix perl warning.
	* perl/Amanda/Disklist.swg: Add message code 1400009
	* perl/Amanda/Paths.pm.in: Add amperldir.
	* perl/Amanda/Rest/Dles.pm: Add check and generate message code
	  1400009, 1300030 and 1300031
	* perl/Amanda/Rest/Labels.pm: fix for defined $params.
	* perl/Amanda/Tapelist.swg: Set reuse to 0.

2014-05-26  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/CheckDump.pm: New perl module for checkdump.
	* server-src/amcheckdump.pl: Use new Amanda::Checkdump module.
	* perl/Amanda/JSON/Amdump.pm: Typo.
	* perl/Amanda/Message.pm: Add Amanda::CheckDump::Message
	* perl/Amanda/Rest/Amanda/bin/app.pl.in: Add
		/amanda/v1.0/configs/:CONF/runs/checkdump
		/amanda/v1.0/configs/:CONF/runs/messages
	* perl/Amanda/Rest/Runs.pm: Add checkdump and messages methods.
	* perl/Makefile.am: Add Amanda/CheckDump.pm

2014-05-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtape.pl: Add relabeled case.

2014-05-12  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/rpm/amanda.spec.src: Add amazon.

2014-05-09  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendsize.c: Fix compiler warning.

2014-05-08  Jean-Louis Martineau <martineau@zmanda.com>